--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
             crossorigin
             href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard.min.css"
         />
+        <script type="text/javascript" src="/src/app/utils/theme.ts"></script>
     </head>
     <body>
         <div id="root"></div>
