--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             crossorigin
             href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard.min.css"
         />
-        <script type="text/javascript" src="/src/app/_utils/theme.ts"></script>
+        <script type="text/javascript" src="/theme.ts"></script>
     </head>
     <body>
         <div id="root"></div>
