--- a/index.html
+++ b/index.html
@@ -2,9 +2,30 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8" />
-        <link rel="icon" type="image/svg+xml" href="/vite.svg" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>천제희 이력서</title>
+        <meta name="description" content="프론트엔드 개발자 천제희 이력서" />
+        <meta
+            name="keywords"
+            content="jeheecheon, 천제희, 이력서, 지원서, 개발자, 프론트엔드, jeheecheon@gmail.com"
+        />
+        <meta name="author" content="jeheecheon" />
+
+        <meta property="og:title" content="천제희 이력서" />
+        <meta
+            property="og:description"
+            content="프론트엔드 개발자 천제희 이력서"
+        />
+        <meta property="og:type" content="website" />
+        <meta property="og:site_name" content="jeheecheon" />
+        <meta property="og:locale" content="ko_KR" />
+        <meta property="og:url" content="https://resume.jeheecheon.com" />
+        <meta name="twitter:title" content="천제희 이력서" />
+        <meta name="twitter:card" content="summary" />
+        <meta
+            name="twitter:description"
+            content="프론트엔드 개발자 천제희 이력서"
+        />
 
         <link
             rel="stylesheet"
@@ -12,6 +33,24 @@
             crossorigin
             href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard.min.css"
         />
+        <link
+            rel="apple-touch-icon"
+            sizes="180x180"
+            href="/apple-touch-icon.png"
+        />
+        <link
+            rel="icon"
+            type="image/png"
+            sizes="32x32"
+            href="/favicon-32x32.png"
+        />
+        <link
+            rel="icon"
+            type="image/png"
+            sizes="16x16"
+            href="/favicon-16x16.png"
+        />
+        <link rel="manifest" href="/site.webmanifest" />
         <script type="text/javascript" src="/theme.js"></script>
     </head>
     <body>
