--- a/index.html
+++ b/index.html
@@ -5,11 +5,14 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>천제희 이력서</title>
         <meta name="description" content="프론트엔드 개발자 천제희 이력서" />
+        <meta name="theme-color" />
+        <meta name="msapplication-navbutton-color" />
         <meta
             name="keywords"
             content="jeheecheon, 천제희, 이력서, 지원서, 개발자, 프론트엔드, jeheecheon@gmail.com"
         />
         <meta name="author" content="jeheecheon" />
+        <meta name="theme-color" content="" />
 
         <meta property="og:title" content="천제희 이력서" />
         <meta
@@ -51,7 +54,7 @@
             href="/favicon-16x16.png"
         />
         <link rel="manifest" href="/site.webmanifest" />
-        <script type="text/javascript" src="/theme.js"></script>
+        <script type="module" src="/src/app/_utils/theme.ts"></script>
     </head>
     <body>
         <div id="root"></div>
