bug: status-bar 색상 통일하여 일관성 유지

--- a/index.html
+++ b/index.html
@@ -5,14 +5,17 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>천제희 이력서</title>
         <meta name="description" content="프론트엔드 개발자 천제희 이력서" />
+
+        <meta name="apple-mobile-web-app-capable" content="yes" />
+        <meta name="apple-mobile-web-app-status-bar-style" content="default" />
         <meta name="theme-color" />
         <meta name="msapplication-navbutton-color" />
+
         <meta
             name="keywords"
             content="jeheecheon, 천제희, 이력서, 지원서, 개발자, 프론트엔드, jeheecheon@gmail.com"
         />
         <meta name="author" content="jeheecheon" />
-        <meta name="theme-color" content="" />
 
         <meta property="og:title" content="천제희 이력서" />
         <meta
@@ -54,6 +57,7 @@
             href="/favicon-16x16.png"
         />
         <link rel="manifest" href="/site.webmanifest" />
+        <link rel="stylesheet" href="src/app/_styles/globals.css" />
     </head>
     <body>
         <div id="root"></div>
